add my Warcraft experiment
WARNING: JANK ALERT!

--- a/experimentations/index.html
+++ b/experimentations/index.html
@@ -44,6 +44,295 @@
 
 	<main>
 		<h1>HTML, CSS and/or Javascript experimentations go here</h1>
+		<div style="display: flex; flex-direction: column">
+			<div style="flex-direction: row; justify-content: space-around">
+				<select id="game1selection" title="Game 1"></select>
+				<select id="game2selection" title="Game 2"></select>
+			</div>
+			<div id=warcraft_diagram></div>
+		</div>
+		<script src=d3.js></script>
+		<script>
+			// import "./d3-collection.js";
+			// import "./d3-selection.js";
+			// import "./d3-tip.js";
+			const MARGIN = { LEFT: 100, RIGHT: 10, TOP: 10, BOTTOM: 100 }
+			const WIDTH = 800 - MARGIN.LEFT - MARGIN.RIGHT
+			const HEIGHT = 500 - MARGIN.TOP - MARGIN.BOTTOM
+			const FORCE_MANYBODY_STRENGTH = -0.1
+			const FORCE_COLLIDE = 1
+			const FORCE_COLLIDE_STRENGTH = 0.01
+			const NODE_SIZE = 2
+			let time = 0
+			let interval
+
+			// const svg = d3.select("#warcraft_diagram")
+			// 	.append("svg")
+			// 	.attr("width", WIDTH + MARGIN.LEFT + MARGIN.RIGHT)
+			// 	.attr("height", HEIGHT + MARGIN.TOP + MARGIN.BOTTOM);
+
+			// const g = svg.append("g")
+			// 	.attr("transform", `translate(${MARGIN.LEFT}, ${MARGIN.TOP})`)
+			// const tip = d3.tip()
+			//     .attr('class', 'd3-tip')
+			//     .html(person => {
+			//         let text = `<strong>Name:</strong> <span style='color:red;text-transform:capitalize'>${person.name}</span><br>`
+			//         text += `<strong>Role:</strong> <span style='color:red;text-transform:capitalize'>${person.role}</span><br>`
+			//         return text
+			//     })
+			// g.call(tip)
+
+			// labels
+			// const game1selectionLabel = g.append("text")
+			// 	.attr("class", "game1 axisLabel")
+			// 	.attr("y", HEIGHT / 2)
+			// 	.attr("x", WIDTH * (1 / 12))
+			// 	.attr("font-size", "20px")
+			// 	.attr("text-anchor", "middle")
+			// 	.text("Warcraft1") // dynamically update this text
+			// const game2Label = g.append("text")
+			// 	.attr("class", "game2 axisLabel")
+			// 	.attr("y", HEIGHT / 2)
+			// 	.attr("x", WIDTH * (10 / 12))
+			// 	.attr("font-size", "20px")
+			// 	.attr("text-anchor", "middle")
+			// 	.text("Warcraft2") // dynamically update this text
+
+			// scales
+			// const colour = d3.scaleOrdinal(d3.schemeCategory10);
+
+			// forces
+			// Add "forces" to the simulation here
+			// let simulation = d3.forceSimulation()
+			// 	.force("center", d3.forceCenter(WIDTH / 2, HEIGHT / 2))
+			// 	.force("charge", d3.forceManyBody().strength(FORCE_MANYBODY_STRENGTH))
+			// 	.force("collide", d3.forceCollide(FORCE_COLLIDE).strength(FORCE_COLLIDE_STRENGTH))
+			// 	.force("link", d3.forceLink().id(d => d.id));
+
+			// DONE
+			// create list of full_title (Title: Subtitle)
+			// in `credits`, filter out everything with "role in non_employee roles"
+			// count the amount of roles so I know how many colours I need for the ordinalScale for roles
+
+			// TODO
+			// give each person a status of fired (worked only on old game), hired (worked on both) and appliered/applyered (?) for new hires.
+			// come up with better names for fired/hired/applyered
+			// create two labels for each game
+			// create the lines between a person and the game(s)
+			// draw each person as a circle with a color according to role
+			// gravitate the largest groups to the bottom, but all in the center
+			// create axes?
+			// create labels?
+			// two choice boxes, one play button for animation
+			// tooltip for when you hover on a person; show their name and role
+			// note: raw data, dirty data
+			const mode = (list) => {
+				r = { "str": '', "int": 0 };
+				list.reduce((obj, str) => {
+					obj[str] ? obj[str]++ : obj[str] = 1;
+					if (r.int < obj[str]) { r.str = str; r.int = obj[str] }
+					return obj;
+				}, {});
+				return r;
+			}
+			const uniq = (list) => {
+				return new Set(list)
+			}
+			let clean_data;
+			const game1Elem = d3.select("#game1selection")
+			const game2Elem = d3.select("#game2selection")
+
+			d3.json("wow_credits.json").then(raw_data => {
+				let n = 0
+				raw_data.forEach(game => {
+					// transform data
+					game.full_title = `${game.title}: ${game.subtitle}`
+					game.credits = game.credits ? game.credits.filter(person => !game.non_employee_roles.includes(person.role)) : []
+					const roles = game.credits.reduce((list, item) => { list.push(item.role); return list }, [])
+					game.roles = uniq(roles)
+					game.role_count = uniq(roles).size
+					game.most_role_count = mode(roles).int
+					// fill in selection options
+					game1Elem.append("option").attr("value", game.full_title).text(game.full_title)
+					game2Elem.append("option").attr("value", game.full_title).text(game.full_title)
+					n++
+				});
+				clean_data = raw_data;
+				update()
+			}).catch(error => console.log(error));
+
+			const update = () => {
+				const game1 = clean_data.find(game => game.full_title == game1selection.value)
+				const game2 = clean_data.find(game => game.full_title == game2selection.value)
+				console.log(game1.non_employee_roles)
+				console.log(game2.non_employee_roles)
+				// create clean nodes
+				let nodes = []
+				const person_filtered_node_push = new_person => {
+					if (!nodes.filter(existing_person => existing_person.name === new_person.name && existing_person.role === new_person.role).length
+						&& !game1.non_employee_roles.includes(new_person.group)
+						&& !game2.non_employee_roles.includes(new_person.group)
+					) {
+						nodes.push({ "id": new_person.name, "group": new_person.role })
+					}
+				}
+				// add the selected games as a node (to point to)
+				nodes.push({ "id": game1.full_title, "group": "game" })
+				nodes.push({ "id": game2.full_title, "group": "game" })
+				// *now* add all the persons
+				game1.credits.forEach(person_filtered_node_push)
+				game2.credits.forEach(person_filtered_node_push)
+				// console.log(nodes);
+
+				let links = []
+				const person_filtered_link_push = gameselection => {
+					return new_person => {
+						links.push({ "source": new_person.name, "target": gameselection })
+					}
+				}
+				game1.credits.forEach(person_filtered_link_push(game1selection.value))
+				game2.credits.forEach(person_filtered_link_push(game2selection.value))
+
+				// console.log(links);
+
+				// helper functions
+				const nodeId = d => d.id
+				const linkSource = ({ source }) => source
+				const linkTarget = ({ target }) => target
+				const intern = (value) => value !== null && typeof value === "object" ? value.valueOf() : value
+				// const nodeTitle = null
+				const nodeTitle = (_, i) => `${nodes[i].id}, ${nodes[i].group}`
+				// const nodeGroup = null
+				const nodeGroup = d => d.group
+				const colors = d3.schemeTableau10
+				let nodeStrength
+				let linkStrength
+				const width = 1920 * 2
+				const height = 1080 * 2
+				const nodeStroke = "#fff"
+				const nodeStrokeWidth = 1.5
+				const nodeStrokeOpacity = 1
+				const nodeRadius = 5
+				const linkStroke = "#999"
+				const linkStrokeOpacity = 0.6
+				const linkStrokeWidth = 1.5
+				const linkStrokeLinecap = "round"
+				const nodeFill = "currentColor"
+				let nodeGroups
+
+
+
+				const N = d3.map(nodes, nodeId).map(intern);
+				const LS = d3.map(links, linkSource).map(intern);
+				const LT = d3.map(links, linkTarget).map(intern);
+				if (nodeTitle === undefined) nodeTitle = (_, i) => N[i];
+				const T = nodeTitle == null ? null : d3.map(nodes, nodeTitle);
+				const G = nodeGroup == null ? null : d3.map(nodes, nodeGroup).map(intern);
+				const W = typeof linkStrokeWidth !== "function" ? null : d3.map(links, linkStrokeWidth);
+
+				console.log(nodes)
+				console.log(links)
+
+				// replace input with mutable objects
+				nodes = d3.map(nodes, (_, i) => ({ id: N[i] }));
+				links = d3.map(links, (_, i) => ({ source: LS[i], target: LT[i] }));
+
+				// console.log(nodes)
+				// console.log(links)
+
+				// domains
+				if (G && nodeGroups === undefined) nodeGroups = d3.sort(G)
+
+				// scales
+				const color = nodeGroup == null ? null : d3.scaleOrdinal(nodeGroups, colors)
+
+				// forces
+				const forceNode = d3.forceManyBody();
+				const forceLink = d3.forceLink(links).id(({ index: i }) => N[i]);
+				if (nodeStrength !== undefined) forceNode.strength(nodeStrength);
+				if (linkStrength !== undefined) forceLink.strength(linkStrength);
+
+				const simulation = d3.forceSimulation(nodes)
+					.force("link", forceLink)
+					.force("charge", forceNode)
+					.force("center", d3.forceCenter())
+					.on("tick", ticked)
+
+				const svg = d3.select("#warcraft_diagram")
+					.append("svg")
+					.attr("width", width)
+					.attr("height", height)
+					.attr("viewBox", [-width / 2, -height / 2, width, height])
+					.attr("style", "max-width: 100%; height: auto; height: intrinsic;")
+
+				const link = svg.append("g")
+					.attr("stroke", linkStroke)
+					.attr("stroke-opacity", linkStrokeOpacity)
+					.attr("stroke-width", typeof linkStrokeWidth !== "function" ? linkStrokeWidth : null)
+					.attr("stroke-linecap", linkStrokeLinecap)
+					.selectAll("line")
+					.data(links)
+					.join("line")
+
+				const node = svg.append("g")
+					.attr("fill", nodeFill)
+					.attr("stroke", nodeStroke)
+					.attr("stroke-opacity", nodeStrokeOpacity)
+					.attr("stroke-width", nodeStrokeWidth)
+					.selectAll("circle")
+					.data(nodes)
+					.join("circle")
+					.attr("r", nodeRadius)
+					.call(drag(simulation))
+
+				if (W) link.attr("stroke-width", ({ index: i }) => W[i])
+				if (G) node.attr("fill", ({ index: i }) => color(G[i]))
+				if (T) node.append("title").text(({ index: i }) => T[i])
+				// if (invalidation != null) invalidation.then(() => simulation.stop());
+
+				function ticked() {
+					link
+						.attr("x1", d => d.source.x)
+						.attr("y1", d => d.source.y)
+						.attr("x2", d => d.target.x)
+						.attr("y2", d => d.target.y);
+
+					node
+						.attr("cx", d => d.x)
+						.attr("cy", d => d.y);
+				}
+
+				function drag(simulation) {
+					function dragstarted(event) {
+						if (!event.active) simulation.alphaTarget(0.3).restart();
+						event.subject.fx = event.subject.x;
+						event.subject.fy = event.subject.y;
+					}
+
+					function dragged(event) {
+						event.subject.fx = event.x;
+						event.subject.fy = event.y;
+					}
+
+					function dragended(event) {
+						if (!event.active) simulation.alphaTarget(0);
+						event.subject.fx = null;
+						event.subject.fy = null;
+					}
+
+					return d3.drag()
+						.on("start", dragstarted)
+						.on("drag", dragged)
+						.on("end", dragended);
+				}
+
+				return Object.assign(svg.node(), { scales: { color } });
+			}
+
+			game1Elem.on("change", update)
+			game2Elem.on("change", update)
+		</script>
+		<hr>
 		<h2>These are the most often used elements by beginners:</h2>
 		<!-- Not to be confused with head or header elements -->
 		<h1>Heading 1</h1>
